# yandex_summarizator

./: .gitignore  LICENSE  README.md  example.py  pipeline.py  pyproject.toml  requirements.txt  test.py
yandex_summarize/: __init__.py  config.py  get_video.py  pipeline.py  video2audio.py  yandex_api.py
yandex_summarize/stt/: stt.py
yandex_summarize/stt/audio_models/google_speech_rec/: api.py
yandex_summarize/stt/audio_models/vosk/: api.py  vosk_api.py
yandex_summarize/stt/audio_models/whisper/: api.py  whisper_api.py
yandex_summarize/summarization/: summarize.py
yandex_summarize/summarization/models/mistral_ai/: api.py  gen_prompt.py
yandex_summarize/summarization/models/rut5_base_absum/: api.py
