[tool.poetry]
name = "yandex-summarizator"
version = "0.1.0"
description = "Project for the second stage of SiriusAI selection"
authors = ["Alicorn757 <131530695+Alicorn757@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"